0024174: [regression] BRepBuilderAPI_Sewing returns result with very high tolerance

Fix for bug 0024174: [regression] BRepBuilderAPI_Sewing returns result with very high tolerance
Test script for CR24174
Test cases for issue CR24174
Small correction of test cases for issue CR24174